Show date info in tooltips

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       }
     ],
     "configuration": {
-      "title": "newsheadlines",
+      "title": "News Headlines",
       "properties": {
         "newsheadlines.newsSource": {
           "type": "array",
