--- a/package.json
+++ b/package.json
@@ -32,14 +32,20 @@
         "newsheadlines.length": {
           "type": "number",
           "default": 40,
-          "minimum": 20,
+          "minimum": 5,
           "description": "The length of the headline's character on the status bar"
         },
         "newsheadlines.showIntervalSeconds": {
           "type": "number",
           "default": 30,
-          "minimum": 30,
+          "minimum": 10,
           "description": "Interval seconds to show a next news"
+        },
+        "newsheadlines.newsFetchIntervalSeconds": {
+          "type": "number",
+          "default": 60,
+          "minimum": 30,
+          "description": "Interval seconds to update news on the internet."
         }
       }
     }
